[package]
name = "angel"
version = "0.1.0-alpha.1"
edition = "2021"
description = "Another OpenGL extension loader"
license = "MIT OR Apache-2.0"
authors = ["Federico Maria Morrone <contact@morrone.dev>"]
repository = "https://github.com/morr0ne/angel"
readme = "README.md"
documentation = "https://docs.rs/angel"

[dependencies]
