[package]
name = "generator"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.17", default-features = false, features = ["help", "usage", "wrap_help", "derive", "std", "color", "error-context"] }
color-eyre = "0.6.2"
itertools = "0.10.5"
reqwest = { version = "0.11.12", default-features = false, features = ["native-tls", "blocking"] }
roxmltree = "0.15.1"
thiserror = "1.0.37"
