[package]
name = "angel"
version = "0.1.0-alpha.2"
edition = "2021"
description = "Another OpenGL extension loader"
license = "Apache-2.0"
authors = ["Matilde Morrone <contact@morrone.dev>"]
repository = "https://github.com/morr0ne/angel"
readme = "../README.md"
documentation = "https://docs.rs/angel"

[dependencies]
tracing = { version = "0.1.37", optional = true, default-features = false }

[features]
default = ["std"]
std = ["tracing?/std"]
trace-errors = ["dep:tracing"]
trace-calls = ["dep:tracing"]
